src/main/default/objects/ChatMessage__c/ChatMessage__c.object-meta.xml
<CustomObject>
    <description>Message in the chat where a bot is involved</description>
    <label>Chat Message</label>
    <nameField>
        <displayFormat>MSG-{000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Chat Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>