src/main/default/objects/ChatMessage__c/fields/Bot__c.field-meta.xml
<CustomField>
    <fullName>Bot__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A bot that sent the message. Can be null if the message was sent by a chat user</description>
    <label>Bot</label>
    <referenceTo>Bot__c</referenceTo>
    <relationshipLabel>Chat Messages</relationshipLabel>
    <relationshipName>ChatMessages</relationshipName>
    <type>Lookup</type>
</CustomField>