src/main/default/objects/ChatMessage__c/fields/MediaUrl__c.field-meta.xml
<CustomField>
    <fullName>MediaUrl__c</fullName>
    <description>The URL to the image or video sent in the message</description>
    <label>Media Url</label>
    <type>Url</type>
</CustomField>