src/main/default/objects/ChatMessage__c/fields/Parameters__c.field-meta.xml
<CustomField>
    <fullName>Parameters__c</fullName>
    <description>The JSON object with message secondary parameters</description>
    <label>Parameters</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>