src/main/default/objects/ChatMessage__c/fields/SendDate__c.field-meta.xml
<CustomField>
    <fullName>SendDate__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <description>Date and time when the message has been sent in the chat</description>
    <label>Send Date</label>
    <type>DateTime</type>
</CustomField>