src/main/default/objects/ChatMessage__c/fields/Text__c.field-meta.xml
<CustomField>
    <fullName>Text__c</fullName>
    <description>The text of the message</description>
    <label>Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>