src/main/default/objects/ChatMessage__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A chat user who sent the message. Can be null if the message was sent by a bot</description>
    <label>User</label>
    <referenceTo>ChatUser__c</referenceTo>
    <relationshipLabel>Messages</relationshipLabel>
    <relationshipName>Messages</relationshipName>
    <type>Lookup</type>
</CustomField>