src/main/default/objects/ChatMessage__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ExternalId__c</columns>
    <columns>Text__c</columns>
    <columns>Chat__c</columns>
    <columns>Bot__c</columns>
    <columns>User__c</columns>
    <columns>SendDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>